# Pynapple

./: .gitignore  crawler.py  pyproject.toml
conf/: config.py  plugin.py
plugins/: PLUGIN_README.md  testplugin.yml
